# teleclaude

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  Makefile  README.md  config.example.yaml  go.mod  go.sum  requirements.txt  teleclaude
.claude/: settings.local.json
docs/: tech-plan.md
scripts/: migrate_sessions.py
src/: __init__.py  exceptions.py  main.py
teleclaude-python/: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
teleclaude-python/src/: main.py
teleclaude-python/src/bot/: __init__.py  application.py  middleware.py
teleclaude-python/src/claude/: __init__.py  client.py  hooks.py
teleclaude-python/src/config/: __init__.py  settings.py
teleclaude-python/src/security/: __init__.py  sandbox.py
teleclaude-python/src/storage/: __init__.py  database.py  repository.py
teleclaude-python/src/utils/: __init__.py
teleclaude-python/tests/: __init__.py  test_application.py  test_claude_client.py  test_config.py  test_exceptions.py  test_formatting.py  test_handlers.py  test_hooks.py  test_main.py  test_middleware.py  test_repository.py
test/: integration_test.go
tests/: test_application.py  test_callbacks.py  test_claude_client.py  test_code_formatting.py  test_commands.py  test_config.py  test_diff_formatting.py  test_handlers.py  test_hooks.py  test_html_utils.py  test_integration.py  test_keyboards.py  test_main.py  test_middleware.py  test_models.py  test_persistence.py  test_repository.py  test_restart_integration.py  test_resume_handlers.py  test_sandbox.py  test_session_preview.py  (+5 more)
(+73 files in other folders)
